bug squashing

--- a/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
+++ b/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
@@ -29,6 +29,10 @@ h4 {
     color: white
 }
 
+.largeFont {
+    font-size: 17px;
+}
+
 .weaponName {
     width: 150px
 }
