--- a/src/app/quick-view/quick-view-drawer.component.css
+++ b/src/app/quick-view/quick-view-drawer.component.css
@@ -140,9 +140,17 @@
 .def {
     position: absolute;
     z-index: 1;
-    left: 30px;
-    top: 65px;
+    left: 15px;
+    top: 48px;
     font-size: 17px;
+    width: 44px;
+    height: 45px;
+    text-align: center;
+    margin: 0 !important;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-evenly;
 }
 
 .stress-threshold-shell {
@@ -180,7 +188,7 @@
     justify-content: space-evenly;
 }
 
-.shield_dr {
+.shield_dr, .shield_cover {
     border-top: 2px solid grey;
 }
 
